gcc/testsuite/rust/rustc/ui/typeck/issue-104513-ice_dg.rs
struct S;
fn f() {
    let _: S<impl Oops> = S; // { dg-error ".E0562." "" { target *-*-* } }
// { dg-error ".E0562." "" { target *-*-* } .-1 }
}
fn main() {}

